[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#servo-websocket="0.21.1"
#security-framework = "2.7.0"
tungstenite = {version = "0.16.0", features = ["native-tls"]}
url = "2.2.2"
rtrb = "0.2"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
indexing = "0.4.0"
prost = "0.6.1"
tonic = {version="0.2.0",features = ["tls"]}
tokio = {version="0.2.18",features = ["stream", "macros"]}
futures = "0.3"

[build-dependencies]
tonic-build = "0.2.0"

[[bin]]
    name = "server"
    path = "src/main.rs"
